# PL-php

./: CHANGELOG.md  HISTORY  INSTALL  Makefile  Makefile.in  README  README.md  config.h.in  configure.in  install.sql  install82.sql  plphp--2.0--2.1.sql  plphp--2.0.sql  plphp--2.1--2.2.sql  plphp--2.2--2.3.sql  plphp--2.3--2.4.sql  plphp--2.4--2.5.sql  plphp--2.5--2.6.sql  plphp.c  plphp.control  plphp_io.c  plphp_io.h  plphp_spi.c  plphp_spi.h
.github/workflows/: ci.yml
bench/: run.sh  setup.sql
bytea_plphp/: Makefile  bytea_plphp--1.0.sql  bytea_plphp.c  bytea_plphp.control
bytea_plphp/expected/: bytea_plphp.out
bytea_plphp/sql/: bytea_plphp.sql
doc/: benchmarks.md  cookbook.md  plperl-comparison.md  plphp.md  pltcl-comparison.md
expected/: arrays.out  arrays_1.out  base.out  base_1.out  base_2.out  cargs.out  compat.out  cookbook.out  coverage.out  cursor.out  domains.out  evttrig.out  init.out  modules.out  oninit.out  out.out  pgerror.out  pseudo.out  raise.out  sd.out  shared.out  shared_2.out  spi.out  srf.out  subxact.out  trigger.out  trigger2.out  trigger_1.out  trigger_2.out  txn.out  validator.out  varnames.out
hstore_plphp/: Makefile  hstore_plphp--1.0.sql  hstore_plphp.c  hstore_plphp.control
hstore_plphp/expected/: hstore_plphp.out
hstore_plphp/sql/: hstore_plphp.sql
jsonb_plphp/: Makefile  jsonb_plphp--1.0.sql  jsonb_plphp.c  jsonb_plphp.control
jsonb_plphp/expected/: jsonb_plphp.out
jsonb_plphp/sql/: jsonb_plphp.sql
sql/: arr_in.sql  arrayret.sql  arrays.sql  base.sql  bset.sql  cargs.sql  compat.sql  cookbook.sql  coverage.sql  cset.sql  cursor.sql  domains.sql  evttrig.sql  modules.sql  oninit.sql  out.sql  pgerror.sql  prepare.sql  pseudo.sql  pspi.sql  ptrig.sql  raise.sql  sd.sql  shared.sql  spi.sql  srf.sql  sspi.sql  strig.sql  subxact.sql  trigger.sql  trigger2.sql  txn.sql  validator.sql  varnames.sql
